[gd_scene load_steps=20 format=3 uid="uid://cq7kh8068wydt"]

[ext_resource type="Script" uid="uid://c5qa6wyq04tp5" path="res://Scripts/game.gd" id="1_2irst"]
[ext_resource type="Texture2D" uid="uid://bdvb3o4pus2h" path="res://Assets/Latest UI/pause button finals.png" id="3_iivbl"]
[ext_resource type="Texture2D" uid="uid://b3kboe204ux8e" path="res://Assets/Latest UI/pause button hover.png" id="4_7nbq1"]
[ext_resource type="Texture2D" uid="uid://bo0ikgs4snrj5" path="res://Assets/Latest UI/btn unselected.png" id="5_iivbl"]
[ext_resource type="Texture2D" uid="uid://wgnftaags2oo" path="res://Assets/Latest UI/btn selected.png" id="6_7nbq1"]
[ext_resource type="PackedScene" uid="uid://dpeyiqobx84gm" path="res://Scenes/Popups/game pause.tscn" id="9_bf53h"]
[ext_resource type="PackedScene" uid="uid://kn3ww41sn366" path="res://Scenes/characters/enemy1.tscn" id="9_nnt18"]
[ext_resource type="PackedScene" uid="uid://n1wxeae77boc" path="res://Scenes/Popups/game over screen.tscn" id="9_rfjv2"]
[ext_resource type="Texture2D" uid="uid://cj6cjwh14u1ad" path="res://Assets/Latest UI/hp under health.png" id="10_7t8sx"]
[ext_resource type="PackedScene" uid="uid://daf2yrxovwj0l" path="res://Scenes/Popups/skill subject.tscn" id="10_71axn"]
[ext_resource type="PackedScene" uid="uid://dl3vw3xrl3kjn" path="res://Scenes/Popups/skill difficulty.tscn" id="11_3so38"]
[ext_resource type="Texture2D" uid="uid://g3l3svaanap5" path="res://Assets/Latest UI/hp ui.png" id="11_mg4q0"]
[ext_resource type="PackedScene" uid="uid://bgqqre1j37jpd" path="res://Scenes/Popups/question screen.tscn" id="12_3cx6b"]
[ext_resource type="Texture2D" uid="uid://uhx1mxrfhs2j" path="res://Assets/Latest UI/hp health.png" id="12_vm72l"]
[ext_resource type="PackedScene" uid="uid://dwrtq05bqmsyk" path="res://Scenes/Popups/game complete screen.tscn" id="14_1phco"]
[ext_resource type="AudioStream" uid="uid://c2mh3eu6nonn" path="res://Assets/BGM/fight-bgm.mp3" id="15_nb51f"]
[ext_resource type="Texture2D" uid="uid://l2vms4h5bbgi" path="res://Assets/UI/player border.png" id="17_ewbju"]
[ext_resource type="PackedScene" uid="uid://difdw6a0qowvh" path="res://Scenes/characters/player.tscn" id="18_85qyi"]
[ext_resource type="Texture2D" uid="uid://febolu87v3ge" path="res://Assets/BG/in game background.png" id="19_iivbl"]

[node name="Game" type="Node2D"]
script = ExtResource("1_2irst")
metadata/_edit_vertical_guides_ = [960.0, 50.0, 561.0, 280.0, 1870.0, 1443.0, 1380.0, 540.0, 1661.0]
metadata/_edit_horizontal_guides_ = [580.0, 956.0, 50.0, 1030.0, 766.0]

[node name="BG" type="Node" parent="."]

[node name="InGameBackground" type="Sprite2D" parent="BG"]
z_index = -10
position = Vector2(930, 540)
texture = ExtResource("19_iivbl")

[node name="BG fill" type="ColorRect" parent="BG"]
z_index = -15
offset_left = -67.0
offset_top = 774.0
offset_right = 1710.0
offset_bottom = 884.0
scale = Vector2(1.15035, 3.14437)
color = Color(0, 0, 0, 1)

[node name="StageDiff" type="Label" parent="."]
visible = false
offset_left = 50.0
offset_right = 333.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 32
text = "Stage Diff Checker"

[node name="Skill Checker" type="Label" parent="."]
visible = false
offset_left = 50.0
offset_top = 41.0
offset_right = 255.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 32
text = "Skill Checker"

[node name="Skill Sub Checker" type="Label" parent="."]
visible = false
offset_left = 50.0
offset_top = 80.0
offset_right = 311.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 32
text = "Skill Sub Checker"

[node name="Sub Diff Checker" type="Label" parent="."]
visible = false
offset_left = 49.0
offset_top = 116.0
offset_right = 445.0
offset_bottom = 161.0
theme_override_font_sizes/font_size = 32
text = "Subject Difficulty Checker"

[node name="Buttons" type="Node" parent="."]

[node name="Pause" type="TextureButton" parent="Buttons"]
anchors_preset = -1
anchor_top = -0.0462963
anchor_right = 0.0572917
anchor_bottom = -0.0462963
offset_left = 1806.0
offset_top = 100.0
offset_right = 1896.0
offset_bottom = 300.0
scale = Vector2(0.425402, 0.425402)
texture_normal = ExtResource("3_iivbl")
texture_pressed = ExtResource("3_iivbl")
texture_hover = ExtResource("4_7nbq1")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons"]
offset_left = 479.0
offset_top = 815.0
offset_right = 2244.0
offset_bottom = 1015.0
scale = Vector2(0.794154, 0.794154)
theme_override_constants/separation = 50

[node name="Recover" type="TextureButton" parent="Buttons/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_iivbl")
texture_pressed = ExtResource("5_iivbl")
texture_hover = ExtResource("6_7nbq1")

[node name="Label" type="Label" parent="Buttons/HBoxContainer/Recover"]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 540.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 64
text = "Recover"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Attack" type="TextureButton" parent="Buttons/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_iivbl")
texture_pressed = ExtResource("5_iivbl")
texture_hover = ExtResource("6_7nbq1")

[node name="Label" type="Label" parent="Buttons/HBoxContainer/Attack"]
layout_mode = 0
offset_left = 17.0
offset_top = 13.0
offset_right = 542.0
offset_bottom = 167.0
theme_override_font_sizes/font_size = 64
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Special" type="TextureButton" parent="Buttons/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_iivbl")
texture_pressed = ExtResource("5_iivbl")
texture_hover = ExtResource("6_7nbq1")

[node name="Label" type="Label" parent="Buttons/HBoxContainer/Special"]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 541.0
offset_bottom = 171.0
theme_override_font_sizes/font_size = 64
text = "Special"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SP Charge" type="Label" parent="Buttons/HBoxContainer/Special"]
z_index = 5
layout_mode = 0
offset_left = 172.603
offset_top = -42.0
offset_right = 383.603
offset_bottom = 14.0
tooltip_text = "Special uses 5 charges to use.
You get a charge for every 
correct answers from recover and attack."
mouse_filter = 0
theme_override_font_sizes/font_size = 32
text = "Charge: 0 / 10"
horizontal_alignment = 1

[node name="Player" type="Node" parent="."]

[node name="player hp bar" type="TextureProgressBar" parent="Player"]
anchors_preset = -1
anchor_left = -0.088
anchor_top = -0.263
anchor_right = -0.088
anchor_bottom = -0.263
offset_left = 529.96
offset_top = 1319.04
offset_right = 1129.96
offset_bottom = 1409.04
rotation = 4.71238
scale = Vector2(0.456663, 0.548697)
value = 100.0
texture_under = ExtResource("10_7t8sx")
texture_over = ExtResource("11_mg4q0")
texture_progress = ExtResource("12_vm72l")

[node name="player name" type="Label" parent="Player"]
offset_left = 202.0
offset_top = -422.0
offset_right = 348.0
offset_bottom = -285.0
theme_override_font_sizes/font_size = 100
text = "Zio"

[node name="Enemy" type="Node" parent="."]

[node name="enemy hp bar" type="TextureProgressBar" parent="Enemy"]
anchors_preset = -1
anchor_left = -0.088
anchor_top = -0.263
anchor_right = -0.088
anchor_bottom = -0.263
offset_left = 1292.96
offset_top = 335.04
offset_right = 1892.96
offset_bottom = 425.04
scale = Vector2(0.999326, 0.754771)
value = 100.0
texture_under = ExtResource("10_7t8sx")
texture_over = ExtResource("11_mg4q0")
texture_progress = ExtResource("12_vm72l")

[node name="enemy name" type="Label" parent="Enemy"]
offset_left = 563.0
offset_top = -450.0
offset_right = 889.0
offset_bottom = -313.0
theme_override_font_sizes/font_size = 100
text = "Guess"

[node name="Popups" type="Node" parent="."]

[node name="GameCompleteScreen" parent="Popups" instance=ExtResource("14_1phco")]
visible = false

[node name="GameOverScreen" parent="Popups" instance=ExtResource("9_rfjv2")]
visible = false
z_index = 5

[node name="GamePause" parent="Popups" instance=ExtResource("9_bf53h")]
visible = false
z_index = 5
metadata/_edit_horizontal_guides_ = [540.0, 211.0, 436.0, 661.0]

[node name="QuestionScreen" parent="Popups" instance=ExtResource("12_3cx6b")]
visible = false
z_index = 10
offset_left = 229.0
offset_right = 1692.0

[node name="SkillSubject" parent="Popups" instance=ExtResource("10_71axn")]
visible = false
unfocusable = false
metadata/_edit_horizontal_guides_ = [200.0]
metadata/_edit_vertical_guides_ = [480.0, 363.0, 181.0, 598.0, 780.0]

[node name="SkillDifficulty" parent="Popups" instance=ExtResource("11_3so38")]
visible = false
unfocusable = false

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_nb51f")

[node name="PlayerBorder" type="Sprite2D" parent="."]
position = Vector2(189, 935)
scale = Vector2(2.95, 2.95)
texture = ExtResource("17_ewbju")

[node name="Enemy_" parent="." instance=ExtResource("9_nnt18")]
scale = Vector2(3.28743, 3.28743)

[node name="Player_" parent="." instance=ExtResource("18_85qyi")]
scale = Vector2(3.30538, 3.30538)

[node name="black space" type="ColorRect" parent="."]
visible = false
z_index = 10
offset_left = -32.0
offset_top = -34.0
offset_right = 2001.0
offset_bottom = 1147.0
color = Color(1, 1, 1, 0)

[connection signal="pressed" from="Buttons/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/Recover" to="." method="_on_recover_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/Special" to="." method="_on_special_pressed"]
